# backtesting-autoresearch

./: .gitignore  LICENSE  README.md  blog.md  main.py  pyproject.toml
ema_crossover_sbin/: backtest.py  program.md  results.tsv  strategy.py
